--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:url" content="https://anniversary.netlify.com/">
     <meta property="og:title" content="Happy Anniversary!!">
     <meta property="og:description" content="We are wishing you a wonderful married life as we celebrate your marriage anniversary! God bless you! We love You!">
     <meta property="og:image" content="./assets/img/cover.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:url" content="https://anniversary.netlify.com/">
     <meta property="twitter:title" content="Happy Anniversary!!">
     <meta property="twitter:description" content="We are wishing you a wonderful married life as we celebrate your marriage anniversary! God bless you! We love You!">
     <meta property="twitter:image" content="./assets/img/cover.png">
-</head>
-<body>
+
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Lato&display=swap" rel="stylesheet"><body>
     <section id="main">
         <svg 
             id="svg_bg" 
