--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <meta property="twitter:description" content="We are wishing you a wonderful married life as we celebrate your marriage anniversary! God bless you! We love You!">
     <meta property="twitter:image" content="./assets/img/cover.png">
 
-    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Lato&display=swap" rel="stylesheet"><body>
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Lato&display=swap" rel="stylesheet">
+  </head>
+  <body>
     <section id="main">
         <svg 
             id="svg_bg" 
