fix: update asset url at ./index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" href="./assets/img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/assets/css/style.css">
+    <link rel="shortcut icon" href="./src/assets/img/icon.png" type="image/x-icon">
 
         <!-- Primary Meta Tags -->
     <title>Happy Anniversary!!</title>
